3. recording to a csv file

--- a/sdk.config
+++ b/sdk.config
@@ -253,7 +253,10 @@ CONFIG_CXD56_UDMAC=y
 CONFIG_CXD56_SFC=y
 CONFIG_CXD56_SFC_PAGE_SHIFT_SIZE=12
 # CONFIG_CXD56_SFC_VERIFY_WRITE is not set
-# CONFIG_CXD56_SDIO is not set
+CONFIG_CXD56_SDIO=y
+CONFIG_CXD56_SDIO_DMA=y
+# CONFIG_CXD56_SDIO_WIDTH_D1_ONLY is not set
+CONFIG_CXD56_SDIO_DISABLE_CD_WP=y
 # CONFIG_CXD56_SPISD is not set
 # CONFIG_CXD56_EMMC is not set
 # CONFIG_CXD56_GE2D is not set
@@ -609,7 +612,7 @@ CONFIG_SDIO_DMA=y
 CONFIG_MMCSD_SDIO=y
 CONFIG_SDIO_MUXBUS=y
 # CONFIG_SDIO_WIDTH_D1_ONLY is not set
-# CONFIG_SDIO_BLOCKSETUP is not set
+CONFIG_SDIO_BLOCKSETUP=y
 # CONFIG_MODEM is not set
 CONFIG_MTD=y
 # CONFIG_MTD_PARTITION is not set
@@ -846,6 +849,8 @@ CONFIG_SYSLOG_MAX_CHANNELS=1
 # CONFIG_SYSLOG_PREFIX is not set
 # CONFIG_SYSLOG_COLOR_OUTPUT is not set
 # CONFIG_SYSLOG_CHAR is not set
+# CONFIG_SYSLOG_CONSOLE is not set
+CONFIG_SYSLOG_DEFAULT=y
 # CONFIG_SYSLOG_FILE is not set
 # CONFIG_CONSOLE_SYSLOG is not set
 # CONFIG_SYSLOG_CHARDEV is not set
